26-July-2011 Michael Babker Version 1.8 Changes
# File paths were incorrectly getting the site path stored with them

23-July-2011 Michael Babker Version 1.8 Changes
- Removed Information view
- Removed Components submenu items
+ Added cpanel view as new default landing
+ Added Akeeba Live Update support

21-July-2011 Michael Babker Version 1.8 Changes
+ Add script to display the position within the playing file

17-July-2011 Michael Babker Version 1.8 Changes
+ Add ability to select default sorting for feed view
+ Add pt-BR translation
~ Update Akeeba Backup System Restore Point definition
~ Convert Information view to JText
# Correct a bug with the published count on feeds admin view
~ Added additional SQL security from Platform 11.1

14-July-2011 Michael Babker Version 1.7 Changes
+ Add ability to link to off-site media

13-July-2011 Michael Babker Version 1.8 Changes
+ Allow front end feed view to render onContentPrepare plugin
+ Add parameter to render the media player on the feed view
~ Optimize the content plugin to handle data from the feed view

12-July-2011 Michael Babker Version 1.8 Changes
+ Add script to display the runtime

10-July-2011 Michael Babker Version 1.8 Changes
+ Add SoundManager2 media player
~ Add demo MP3 player from SM2 site

10-July-2011 Michael Babker Version 1.7 Changes
# Fix a bug in custom code rendering for content plugin

5-July-2011 Michael Babker Version 1.8 Changes
# Fix routing bug for front end edit
- Remove create link from feed view because of routing bug
~ Rename routing functions specific to podcast edit
+ Add front end feed edit view
+ Add batch processing

30-June-2011 Michael Babker Version 1.8 Changes
~ Rename the layouts for the HTML view
~ Language strings for various menu components
+ Routing and methods for podcast edit
+ Add podcast edit view
# Fix routing bug in front end media

30-June-2011 Michael Babker Version 1.7 Changes
# Correct the installation SQL with the summary changes
