@@ -1,5 +1,6 @@
 26-July-2011 Michael Babker Version 1.8 Changes
 # File paths were incorrectly getting the site path stored with them
+! Rework preg_match check in RSS feed to prevent path disclosure
 
 23-July-2011 Michael Babker Version 1.8 Changes
 - Removed Information view
